--- a/kafkaConsumer/pom.xml
+++ b/kafkaConsumer/pom.xml
@@ -29,5 +29,10 @@
 		    <artifactId>gson</artifactId>
 		    <version>2.7</version>
 		</dependency>
+		<dependency>
+		   <groupId>com.github.oxo42</groupId>
+		   <artifactId>stateless4j</artifactId>
+		   <version>2.5.0</version>
+		</dependency>
 	</dependencies>
 </project>
