--- a/kafkaConsumer/pom.xml
+++ b/kafkaConsumer/pom.xml
@@ -34,5 +34,10 @@
 		   <artifactId>stateless4j</artifactId>
 		   <version>2.5.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>3.2.2</version>
+		</dependency>
 	</dependencies>
 </project>
