--- a/kafkaConsumer/pom.xml
+++ b/kafkaConsumer/pom.xml
@@ -25,6 +25,11 @@
 		    <version>1.0-rc2</version>
 		 </dependency>
 		<dependency>
+		    <groupId>org.apache.activemq</groupId>
+		    <artifactId>activemq-openwire-legacy</artifactId>
+		    <version>5.14.1</version>
+		</dependency> 
+		<dependency>
 		    <groupId>com.google.code.gson</groupId>
 		    <artifactId>gson</artifactId>
 		    <version>2.7</version>
