--- a/Dockerfiles/Taktstrasse/Dockerfile
+++ b/Dockerfiles/Taktstrasse/Dockerfile
@@ -9,16 +9,13 @@ RUN apt-get install -y openjdk-8-jre
 COPY entrypoint.sh /
 RUN chmod u+x /entrypoint.sh
 
+WORKDIR /jarfile
+
 # copy simulation on docker and set permissions 
-COPY TaktstrasseOpcServer-0.0.1-SNAPSHOT.jar /
+COPY TaktstrasseOpcServer-0.0.1-SNAPSHOT.jar /jarfile
 RUN chmod u+x /TaktstrasseOpcServer-0.0.1-SNAPSHOT.jar
 
 # create directory for the temporary file
-RUN mkdir -p /temp
-
-# expose ports 
-EXPOSE 32772
-EXPOSE 61616
-EXPOSE 9092
+RUN mkdir -p /jarfile/temp
 
 ENTRYPOINT /entrypoint.sh
