--- a/Dockerfiles/docker-compose.yml
+++ b/Dockerfiles/docker-compose.yml
@@ -1,19 +1,28 @@
 version: '2'
 
-services: 
-    Kafka: 
-        build: ./Kafka
+services:
+    kafka:
+        build: ./kafka
         ports:
             - "2181:2181"
             - "9092:9092"
-    Takstrasse: 
-        build: ./Takstrasse
+    activemq:
+        build: ./activemq
         ports:
-            - "2181:2181"
-            - "9092:9092"
-#    Spark:
-#        build: ./Spark
-#        ports: 
+            - "61616:61616"
+            - "8161:8161"
+            - "5672:5672"
+            - "61613:61613"
+            - "1883:1883"
+            - "61614:61614"
+    taktstrasse:
+        build: ./taktstrasse
+        links:
+            - kafka:kafka
+            - activemq:activemq
+#    spark:
+#        build: ./spark
+#        ports:
 #            - "8080:8080"
 #            - "7077:7077"
 #        environment:
