--- a/kafkaConsumer/pom.xml
+++ b/kafkaConsumer/pom.xml
@@ -44,5 +44,10 @@
 			<artifactId>mongo-java-driver</artifactId>
 			<version>3.2.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-streaming-kafka-0-10_2.11</artifactId>
+			<version>2.0.1</version>
+		</dependency>
 	</dependencies>
 </project>
