--- a/kafkaConsumer/.project
+++ b/kafkaConsumer/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Kafka-Reader</name>
+	<name>Backend-Application</name>
 	<comment></comment>
 	<projects>
 	</projects>
