--- a/Dockerfiles/node/Dockerfile
+++ b/Dockerfiles/node/Dockerfile
@@ -1,25 +1,10 @@
-FROM ubuntu:16.04
-MAINTAINER Fabian Otto
+FROM node:argon
 
-# copy entrypoint script on docker and set permissions
-COPY entrypoint.sh /
-RUN chmod u+x /entrypoint.sh
+RUN mkdir -p /usr/src/app
+WORKDIR /usr/src/app
 
-# copy js programm on docker and set permissions
-RUN mkdir -p /SetupFiles
-COPY that_js_file /SetupFiles
-RUN chmod u+x /jsFiles/that_js_file
-
-# copy package.json on docker
-COPY package.json /SetupFiles
-
-# install nodejs and npm
-RUN apt-get update; apt-get install nodejs;
-apt-get install nodejs-legacy; apt-get install npm
-
-RUN cd /SetupFiles; npm install
-
-# expose nodejs port
+COPY ../../Frontend/package.json /usr/src/app/
+RUN npm install
+COPY ../../Frontend/. /usr/src/app
 EXPOSE 3000
-
-ENTRYPOINT /entrypoint.sh
+CMD [ "npm", "start" ]
