--- a/Dockerfiles/node/Dockerfile
+++ b/Dockerfiles/node/Dockerfile
@@ -2,9 +2,9 @@ FROM node:argon
 
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
-
-COPY ../../Frontend/package.json /usr/src/app/
+COPY nodeapp/package.json /usr/src/app/
 RUN npm install
-COPY ../../Frontend/. /usr/src/app
+
+COPY nodeapp/. /usr/src/app
 EXPOSE 3000
 CMD [ "npm", "start" ]
