--- a/Spark/pom.xml
+++ b/Spark/pom.xml
@@ -1,4 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>SparkTest</groupId>
@@ -11,8 +11,8 @@
         <spark.version>2.0.1</spark.version>
         <java.version>1.8</java.version>
         <scala.binary.version>2.11</scala.binary.version>
-        <maven.compiler.source>1.6</maven.compiler.source>
-        <maven.compiler.target>1.6</maven.compiler.target>
+        <!--<maven.compiler.source>1.6</maven.compiler.source>-->
+        <!--<maven.compiler.target>1.6</maven.compiler.target>-->
         <encoding>UTF-8</encoding>
     </properties>
 
@@ -153,15 +153,4 @@
 
         </plugins>
     </build>
-    <!--<reporting>-->
-        <!--<plugins>-->
-            <!--<plugin>-->
-                <!--<groupId>org.scala-tools</groupId>-->
-                <!--<artifactId>maven-scala-plugin</artifactId>-->
-                <!--<configuration>-->
-                    <!--<scalaVersion>${scala.version}</scalaVersion>-->
-                <!--</configuration>-->
-            <!--</plugin>-->
-        <!--</plugins>-->
-    <!--</reporting>-->
 </project>
