--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -33,6 +33,11 @@
 		    <artifactId>activemq-openwire-legacy</artifactId>
 		    <version>5.14.1</version>
 		</dependency>
+		<!-- <dependency>
+    		<groupId>org.apache.activemq</groupId>
+    		<artifactId>activemq-core</artifactId>
+    		<version>5.7.0</version>
+		</dependency>-->
 		<dependency>
 		    <groupId>com.google.code.gson</groupId>
 		    <artifactId>gson</artifactId>
@@ -53,6 +58,12 @@
 			<artifactId>spark-streaming-kafka-0-10_2.11</artifactId>
 			<version>2.0.1</version>
 		</dependency>
+		<dependency>
+    	    <groupId>javax</groupId>
+       	 	<artifactId>javaee-api</artifactId>
+        	<version>6.0</version>
+        	<scope>runtime</scope>
+    	</dependency>
 	</dependencies>
 	<build>
 		<!-- name of jar -->
