Working Scala Kafka Producer included.

--- a/Dockerfiles/docker-compose.yml
+++ b/Dockerfiles/docker-compose.yml
@@ -30,9 +30,9 @@ services:
         environment:
             - SPARK_OPTS="--driver-memory=5g --executor-memory=5g"
             - JAVA_OPTS=-verbose:gc -Xms1G -Xmx1G
-#    node:
-#        build: ./node
-#        links:
-#            - kafka
-#        ports:
-#            - "3000:3000"
+    node:
+        build: ./node
+        links:
+            - kafka
+        ports:
+            - "3000:3000"
