--- a/Spark/pom.xml
+++ b/Spark/pom.xml
@@ -7,10 +7,11 @@
     <inceptionYear>2008</inceptionYear>
     <properties>
         <scala.version>2.11.8</scala.version>
-        <kafka.version>0.10.0.1</kafka.version>
+        <kafka.version>0.10.1.0</kafka.version>
         <spark.version>2.0.1</spark.version>
         <java.version>1.8</java.version>
         <scala.binary.version>2.11</scala.binary.version>
+        <jackson.version>2.8.4</jackson.version>
         <!--<maven.compiler.source>1.6</maven.compiler.source>-->
         <!--<maven.compiler.target>1.6</maven.compiler.target>-->
         <encoding>UTF-8</encoding>
@@ -74,6 +75,34 @@
             <artifactId>scala-library</artifactId>
             <version>${scala.version}</version>
         </dependency>
+
+        <!--Json Library-->
+        <!--<dependency>-->
+            <!--<groupId>com.fasterxml.jackson.core</groupId>-->
+            <!--<artifactId>jackson-core</artifactId>-->
+            <!--<version>${jackson.version}</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>com.fasterxml.jackson.core</groupId>-->
+            <!--<artifactId>jackson-annotations</artifactId>-->
+            <!--<version>${jackson.version}</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>com.fasterxml.jackson.core</groupId>-->
+            <!--<artifactId>jackson-databind</artifactId>-->
+            <!--<version>${jackson.version}</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.json4s</groupId>-->
+            <!--<artifactId>json4s-native_${scala.binary.version}</artifactId>-->
+            <!--<version>3.4.2</version>-->
+        <!--</dependency>-->
+        <dependency>
+            <groupId>org.json4s</groupId>
+            <artifactId>json4s-jackson_${scala.binary.version}</artifactId>
+            <version>3.2.10</version>
+        </dependency>
+
 
         <!--other-->
         <dependency>
