--- a/Dockerfiles/node/nodeapp/package.json
+++ b/Dockerfiles/node/nodeapp/package.json
@@ -9,9 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "assert": "^1.4.1",
     "express": "^4.14.0",
     "http": "0.0.0",
-    "kafka-node": "^1.0.4",
+    "jsonfile": "^2.4.0",
+    "kafka-node": "^1.0.5",
+    "mongodb": "^2.2.11",
     "socket.io": "^1.5.1"
   }
 }
