--- a/Dockerfiles/mongodb/Dockerfile
+++ b/Dockerfiles/mongodb/Dockerfile
@@ -1,22 +1,24 @@
-FROM  ubuntu:latest
+FROM ubuntu:latest
 MAINTAINER Philip Riecks
 
 # Import MongoDB public GPG key AND create a MongoDB list file
-RUN \
- apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 7F0CEB10 && \
- echo 'deb http://downloads-distro.mongodb.org/repo/ubuntu-upstart dist 10gen' > /etc/apt/sources.list.d/mongodb.list && \
- apt-get update && \
- apt-get install -y mongodb-org && \
- rm -rf /var/lib/apt/lists/*
+RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv EA312927
+RUN echo "deb http://repo.mongodb.org/apt/ubuntu xenial/mongodb-org/3.2 multiverse" | tee /etc/apt/sources.list.d/mongodb-org-3.2.list
+
+# Install MongoDB
+RUN apt-get update && apt-get install -y mongodb-org
 
 # Creating the MongoDB data directory
 RUN mkdir -p /data/db
 
+# Copy some existing data to ensure a reliable analysis
+COPY historicData.json /data
+
+# Copy entrypoint script and give privileges to execute
+COPY entrypoint.sh /
+RUN chmod u+x /entrypoint.sh
+
 # Expose port 27017 from the container to the host
 EXPOSE 27017
 
-# Define mountable directorys
-VOLUME ["/data/db"]
-
-# Set entry-point application
-ENTRYPOINT ["/usr/bin/mongod"]
+ENTRYPOINT /entrypoint.sh
