--- a/Spark/pom.xml
+++ b/Spark/pom.xml
@@ -78,21 +78,6 @@
 
         <!--Json Library-->
         <!--<dependency>-->
-            <!--<groupId>com.fasterxml.jackson.core</groupId>-->
-            <!--<artifactId>jackson-core</artifactId>-->
-            <!--<version>${jackson.version}</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>com.fasterxml.jackson.core</groupId>-->
-            <!--<artifactId>jackson-annotations</artifactId>-->
-            <!--<version>${jackson.version}</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>com.fasterxml.jackson.core</groupId>-->
-            <!--<artifactId>jackson-databind</artifactId>-->
-            <!--<version>${jackson.version}</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
             <!--<groupId>org.json4s</groupId>-->
             <!--<artifactId>json4s-native_${scala.binary.version}</artifactId>-->
             <!--<version>3.4.2</version>-->
@@ -101,6 +86,13 @@
             <groupId>org.json4s</groupId>
             <artifactId>json4s-jackson_${scala.binary.version}</artifactId>
             <version>3.2.10</version>
+        </dependency>
+
+        <!--mongo-->
+        <dependency>
+            <groupId>org.mongodb.mongo-hadoop</groupId>
+            <artifactId>mongo-hadoop-spark</artifactId>
+            <version>2.0.1</version>
         </dependency>
 
 
