--- a/Spark/pom.xml
+++ b/Spark/pom.xml
@@ -117,6 +117,21 @@
             <version>1.4.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+        	<groupId>org.mongodb.spark</groupId>
+        	<artifactId>mongo-spark-connector_2.11</artifactId>
+        	<version>1.1.0</version>
+        </dependency>
+        <dependency>
+        	<groupId>org.mongodb.scala</groupId>
+        	<artifactId>mongo-scala-driver_2.11</artifactId>
+        	<version>1.1.1</version>
+        </dependency>
+        <dependency>
+        	<groupId>org.mongodb</groupId>
+        	<artifactId>casbah_2.11</artifactId>
+        	<version>3.1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
