--- a/Spark/pom.xml
+++ b/Spark/pom.xml
@@ -77,30 +77,17 @@
         </dependency>
 
         <!--Json Library-->
-        <!--<dependency>-->
-            <!--<groupId>com.fasterxml.jackson.core</groupId>-->
-            <!--<artifactId>jackson-core</artifactId>-->
-            <!--<version>${jackson.version}</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>com.fasterxml.jackson.core</groupId>-->
-            <!--<artifactId>jackson-annotations</artifactId>-->
-            <!--<version>${jackson.version}</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>com.fasterxml.jackson.core</groupId>-->
-            <!--<artifactId>jackson-databind</artifactId>-->
-            <!--<version>${jackson.version}</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.json4s</groupId>-->
-            <!--<artifactId>json4s-native_${scala.binary.version}</artifactId>-->
-            <!--<version>3.4.2</version>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>org.json4s</groupId>
             <artifactId>json4s-jackson_${scala.binary.version}</artifactId>
             <version>3.2.10</version>
+        </dependency>
+
+        <!--mongoDB-->
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>casbah_${scala.binary.version}</artifactId>
+            <version>3.1.1</version>
         </dependency>
 
 
@@ -116,21 +103,6 @@
             <artifactId>specs</artifactId>
             <version>1.4.3</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-        	<groupId>org.mongodb.spark</groupId>
-        	<artifactId>mongo-spark-connector_2.11</artifactId>
-        	<version>1.1.0</version>
-        </dependency>
-        <dependency>
-        	<groupId>org.mongodb.scala</groupId>
-        	<artifactId>mongo-scala-driver_2.11</artifactId>
-        	<version>1.1.1</version>
-        </dependency>
-        <dependency>
-        	<groupId>org.mongodb</groupId>
-        	<artifactId>casbah_2.11</artifactId>
-        	<version>3.1.1</version>
         </dependency>
     </dependencies>
 
