fixed nodeapp and cleaned repo

--- a/Dockerfiles/node/Dockerfile
+++ b/Dockerfiles/node/Dockerfile
@@ -2,16 +2,12 @@ FROM node:argon
 
 MAINTAINER Philip Riecks
 
-# Copy entrypoint script on docker and set permissions
-COPY entrypoint.sh /
-RUN chmod u+x /entrypoint.sh
-
 # Include package.json
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
 # Copy the node app to the docker directory
-COPY nodeapp3/. /usr/src/app
+COPY nodeapp/. /usr/src/app
 
 # Install all dependencies and build the project
 RUN npm install
